logs/mrsd_ros_tutorials/build.make.009.log.stderr
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In constructor ‘ImageConverter::ImageConverter()’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: error: no matching function for call to ‘ros::NodeHandle::advertiseService(const char [15], void (ImageConverter::*)(), ImageConverter* const)’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note: candidates are:
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:878:17: note: template<class T, class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (T::*)(MReq&, MRes&), T*)
   ServiceServer advertiseService(const std::string& service, bool(T::*srv_func)(MReq &, MRes &), T *obj)
                 ^
/opt/ros/indigo/include/ros/node_handle.h:878:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool’ and ‘void’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:923:17: note: template<class T, class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (T::*)(ros::ServiceEvent<MReq, MRes>&), T*)
   ServiceServer advertiseService(const std::string& service, bool(T::*srv_func)(ServiceEvent<MReq, MRes>&), T *obj)
                 ^
/opt/ros/indigo/include/ros/node_handle.h:923:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool’ and ‘void’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:969:17: note: template<class T, class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (T::*)(MReq&, MRes&), const boost::shared_ptr<X>&)
   ServiceServer advertiseService(const std::string& service, bool(T::*srv_func)(MReq &, MRes &), const boost::shared_ptr<T>& obj)
                 ^
/opt/ros/indigo/include/ros/node_handle.h:969:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool’ and ‘void’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1016:17: note: template<class T, class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (T::*)(ros::ServiceEvent<MReq, MRes>&), const boost::shared_ptr<X>&)
   ServiceServer advertiseService(const std::string& service, bool(T::*srv_func)(ServiceEvent<MReq, MRes>&), const boost::shared_ptr<T>& obj)
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1016:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool’ and ‘void’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1060:17: note: template<class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (*)(MReq&, MRes&))
   ServiceServer advertiseService(const std::string& service, bool(*srv_func)(MReq&, MRes&))
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1060:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool (*)(MReq&, MRes&)’ and ‘void (ImageConverter::*)()’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1103:17: note: template<class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, bool (*)(ros::ServiceEvent<MReq, MRes>&))
   ServiceServer advertiseService(const std::string& service, bool(*srv_func)(ServiceEvent<MReq, MRes>&))
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1103:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   mismatched types ‘bool (*)(ros::ServiceEvent<MReq, MRes>&)’ and ‘void (ImageConverter::*)()’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1144:17: note: template<class MReq, class MRes> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, const boost::function<bool(MReq&, MRes&)>&, const VoidConstPtr&)
   ServiceServer advertiseService(const std::string& service, const boost::function<bool(MReq&, MRes&)>& callback, 
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1144:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   ‘void (ImageConverter::*)()’ is not derived from ‘const boost::function<bool(MReq&, MRes&)>’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1189:17: note: template<class S> ros::ServiceServer ros::NodeHandle::advertiseService(const string&, const boost::function<bool(S&)>&, const VoidConstPtr&)
   ServiceServer advertiseService(const std::string& service, const boost::function<bool(S&)>& callback, 
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1189:17: note:   template argument deduction/substitution failed:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:52:86: note:   ‘void (ImageConverter::*)()’ is not derived from ‘const boost::function<bool(S&)>’
     service = nh.advertiseService("ImageConverter", &ImageConverter::saveDataCB, this);
                                                                                      ^
In file included from /opt/ros/indigo/include/ros/ros.h:45:0,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:3:
/opt/ros/indigo/include/ros/node_handle.h:1221:17: note: ros::ServiceServer ros::NodeHandle::advertiseService(ros::AdvertiseServiceOptions&)
   ServiceServer advertiseService(AdvertiseServiceOptions& ops);
                 ^
/opt/ros/indigo/include/ros/node_handle.h:1221:17: note:   candidate expects 1 argument, 3 provided
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp: In member function ‘void ImageConverter::saveDataCB()’:
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:5: error: ‘name’ was not declared in this scope
     name = "hard"+ name + ".jpg";
     ^
/home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:80:5: note: suggested alternative:
In file included from /usr/include/pcl-1.7/pcl/point_cloud.h:50:0,
                 from /usr/include/pcl-1.7/pcl/pcl_base.h:53,
                 from /usr/include/pcl-1.7/pcl/common/io.h:45,
                 from /usr/include/pcl-1.7/pcl/io/io.h:43,
                 from /home/jin/ros/apriltag_size/src/mrsd_ros_tutorials/src/subscribe_pc_node.cpp:11:
/usr/include/pcl-1.7/pcl/point_traits.h:114:12: note:   ‘pcl::traits::name’
     struct name : name<typename POD<PointT>::type, Tag, dummy>
            ^
make[2]: *** [CMakeFiles/subscribe_pc_node.dir/src/subscribe_pc_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/subscribe_pc_node.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
